--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,5 @@
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features"
   },
-  "debug.javascript.autoAttachFilter": "always"
+  "debug.javascript.autoAttachFilter": "disabled"
 }
